Added possibility to animal to choose most suitable food